Project to get de data to configurate the system

--- a/AutomaticDownloadFile/AutomaticDownloadFile.csproj
+++ b/AutomaticDownloadFile/AutomaticDownloadFile.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Topshelf" Version="4.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AutomaticDownloadFile.Config\AutomaticDownloadFile.Config.csproj" />
+    <ProjectReference Include="..\FileDados\FileDados.csproj" />
+  </ItemGroup>
+
 </Project>
