--- a/AutomaticFileConfigForms/AutomaticFileConfigForms.csproj
+++ b/AutomaticFileConfigForms/AutomaticFileConfigForms.csproj
@@ -8,4 +8,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FileDados\FileDados.csproj" />
+  </ItemGroup>
+
 </Project>
